HomePage cleaning code in Spring Boot